<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/profileFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="50dp"
    tools:context=".ui.profile.ProfileFragment">

    <!-- Scrollable Content -->
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="50dp"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <!-- Profile Picture -->
            <ImageView
                android:id="@+id/iv_profile_picture"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_gravity="center"
                android:layout_marginTop="24dp"
                android:background="@drawable/ic_person"
                android:contentDescription="@string/profile_picture"
                android:src="@drawable/ic_person" />

            <!-- Name -->
            <TextView
                android:id="@+id/tv_profile_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:text="Fadel Ganteng"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <!-- Email -->
            <TextView
                android:id="@+id/tv_profile_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="4dp"
                android:text="Itunuoluwa.Abidoye@gmail.com"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <!-- Personal Information -->
            <TextView
                android:id="@+id/tv_personal_information"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="Personal Information"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <!-- First Name Input -->
            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/full_name" />
            </com.google.android.material.textfield.TextInputLayout>

            <!--            &lt;!&ndash; Last Name Input &ndash;&gt;-->
            <!--            <com.google.android.material.textfield.TextInputLayout-->
            <!--                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"-->
            <!--                android:layout_width="match_parent"-->
            <!--                android:layout_height="wrap_content"-->
            <!--                android:layout_marginTop="12dp">-->

            <!--                <com.google.android.material.textfield.TextInputEditText-->
            <!--                    android:id="@+id/edLastName"-->
            <!--                    android:layout_width="match_parent"-->
            <!--                    android:layout_height="wrap_content"-->
            <!--                    android:hint="@string/last_name" />-->
            <!--            </com.google.android.material.textfield.TextInputLayout>-->

            <!-- Phone Number Input -->
            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edPhoneNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/phone_number" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Date of Birth Input -->
            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edDateOfBirth"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/date_of_birth" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Personal Nutrition Section -->
            <TextView
                android:id="@+id/tv_personal_nutrition"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="Personal Nutrition"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <!-- Height Input -->
            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edHeight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Height (cm)" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Weight Input -->
            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edWeight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Weight (kg)" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- BMI Input -->
            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edBMI"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="BMI" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Activity Factor Dropdown -->
            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                app:endIconMode="dropdown_menu">

                <AutoCompleteTextView
                    android:id="@+id/ActivityFactor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Activity Factor"
                    android:inputType="none" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Update Profile Button -->
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_update_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:backgroundTint="@color/green"
                android:text="@string/update_profile"
                android:textColor="@color/white"
                app:cornerRadius="50dp" />

            <!-- Log Out Button -->
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_logout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:backgroundTint="#E53935"
                android:text="@string/LogOut"
                android:textColor="@color/white"
                app:cornerRadius="50dp" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
